@@ -15,19 +15,19 @@ calculatePairwiseSimilarities(
 )
 }
 \arguments{
-\item{file}{Path to the filtered ped/map file pair (without ped/map file extension)}
+\item{file}{A string representing the path to the filtered ped/map file pair (without ped/map file extension).}
 
-\item{db}{Path to an existing genotype database}
+\item{db}{A string representing the path to an existing genotype database. If not provided, the function will proceed with the existing data.}
 
-\item{map}{Filepath to PlateDnoY.map file}
+\item{map}{A string representing the filepath to PlateDnoY.map file. If not provided, the function will use the map file with the same name as the ped file.}
 
-\item{out}{Path to the output, can be empty}
+\item{out}{A string representing the path to the output. If not provided, the output will be written to a file with the same name as the input file, appended with "_oDB".}
 
-\item{sexing}{Logical, should the function try to perform sexing}
+\item{sexing}{A logical value indicating whether the function should try to perform sexing. Default is TRUE.}
 
-\item{verbose}{Should the output be verbose, logical}
+\item{verbose}{A logical value indicating whether the output should be verbose. Default is TRUE.}
 
-\item{verbosity}{Level of verbosity, set to higher number for more details}
+\item{verbosity}{An integer representing the level of verbosity. Set to a higher number for more detailed output. Default is 1.}
 }
 \value{
 A list containing the following elements:
@@ -35,10 +35,10 @@ gensim, a matrix indicating if genotypes are called correctly for replicates and
 summs, a matrix with summary statistics
 }
 \description{
-This function is a wrapper to plink to calculate pairwise similarities
+This function serves as a wrapper to the PLINK software, which is a free, open-source whole genome association analysis toolset. It specifically uses PLINK to calculate pairwise similarities between genotypes.
 }
 \details{
-Additional details...
+The function first checks the input parameters and sets default values if necessary. It then constructs and executes a PLINK command to merge the genotype output with the existing genotype database if one is provided. Finally, it calculates pairwise similarities for all samples (and database individuals) using another PLINK command. If the 'sexing' parameter is set to TRUE, the function will also attempt to determine the sex of the individuals.
 }
 \examples{
 \dontrun{
